# USD-Fileformat-plugins

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  DoxygenLayout.xml  README.md  changelog.txt  index.html  mainpage.dox  shields.json  usd_versions.json  version.h.in  version.json
fbx/: CMakeLists.txt  README.md
fbx/src/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  fbx.cpp  fbx.h  fbxExport.cpp  fbxExport.h  fbxImport.cpp  fbxImport.h  fbxResolver.cpp  fbxResolver.h  fileFormat.cpp  fileFormat.h  plugInfo.json.in  precompiled.h
fbx/tests/: CMakeLists.txt  SanityCube.fbx  sanityTests.cpp  util.cpp  util.h
fbx/tests/fbx-usd/: uppercase.usd
gltf/: CMakeLists.txt  README.md  README_NGP.md
gltf/src/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  fileFormat.cpp  fileFormat.h  gltf.cpp  gltf.h  gltfAnisotropy.cpp  gltfAnisotropy.h  gltfAnisotropyASM.cpp  gltfAnisotropyASM.h  gltfAnisotropyOpenPBR.cpp  gltfAnisotropyOpenPBR.h  gltfExport.cpp  gltfExport.h  gltfImport.cpp  gltfImport.h  gltfResolver.cpp  gltfResolver.h  gltfSpecGloss.cpp  gltfSpecGloss.h  importGltfContext.h  neuralAssetsHelper.cpp  neuralAssetsHelper.h  plugInfo.json.in  precompiled.h  tinygltf.cpp
gltf/tests/: CMakeLists.txt  ExtCoat.gltf  ExtCoatSimple.gltf  ExtDiffuseRoughness.gltf  ExtDispersion.gltf  ExtFuzz.gltf  ExtIridescence.gltf  ExtVolumeScatterDiffuseTransmission.gltf  ExtVolumeScatterTransmission.gltf  TransmissionThinWalled.gltf  TransmissionVolumetric.gltf  openpbr_base_weight.usda  sanityTests.cpp
ipc/: CMakeLists.txt
ipc/include/ipc/: api.h  pipe.h  platformConfig.h  process.h  sharedMemory.h
ipc/src/: factory.cpp  pipe.cpp  sharedMemory.cpp
ipc/src/posix/: processPosix.cpp  processPosix.h  sharedMemoryPosix.cpp  sharedMemoryPosix.h
ipc/src/win/: processWin.cpp  processWin.h  sharedMemoryWin.cpp  sharedMemoryWin.h  utilitiesWin.cpp  utilitiesWin.h
ipc/tests/: CMakeLists.txt  testPipe.cpp  testProcess.cpp  testSharedMemory.cpp
ply/: CMakeLists.txt  README.md
ply/src/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  dictencoder.cpp  dictencoder.h  fileFormat.cpp  fileFormat.h  plugInfo.json.in  plyExport.cpp  plyExport.h  plyImport.cpp  plyImport.h
ply/tests/: CMakeLists.txt  sanityTests.cpp  貝殻ビューア Colored Cube.ply
sandbox/: CMakeLists.txt  README.md  path.h.in  sandbox_profile_template.sb.in
sandbox/include/sandbox/: api.h  debugCodes.h  platformConfig.h
sandbox/src/: debugCodes.cpp
sandbox/src/fileformat/: CMakeLists.txt  fileFormat.cpp  plugInfo.json.in  sandboxProxyResolver.cpp
sandbox/src/hardening/: CMakeLists.txt  hardeningLinux.cpp  hardeningMac.cpp  hardeningWin.cpp  sandboxProfile.cpp  sandboxProfile.h
sandbox/src/protocol/: CMakeLists.txt  assetReader.cpp  assetWriter.cpp  hostProtocol.cpp  messageIO.cpp  messages.cpp  protocolBase.cpp  sandboxProtocol.cpp
sandbox/src/resolver/: CMakeLists.txt  badAssetResolver.cpp  inMemoryResolver.cpp  inMemoryWritableAsset.cpp  plugInfo.json.in
sandbox/src/restricted/: CMakeLists.txt  sandboxedProcess.cpp
sandbox/src/utilities/: CMakeLists.txt  base64url.cpp  quarantine.cpp  sandboxAssetCache.cpp  utilities.cpp
sandbox/tests/: CMakeLists.txt  main.cpp  testBadAssetResolver.cpp  testBase64url.cpp  testPluginPath.cpp  testProtocol.cpp  testUtilities.cpp
sbsar/: CMakeLists.txt  README.md  thirdparties.md
sbsar/data/: DoubleCardBoard.usda  direct_reference.usda  environment.usda  mat-ball.usd  random_seed.usda  several_sbsar.usda  simplest.usda  variants.usda  variants_image.usda
sbsar/data/sbsar/: CardBoard.sbs  CardBoard.sbsar  DoubleCardBoard.sbs  DoubleCardBoard.sbsar  Fabric_ASM.sbsar  Tiles.sbs  Tiles.sbsar  asm_material.sbsar  env_map_blue.sbsar  input_image.sbs  input_image.sbsar  outputvalues_asm.sbsar
sbsar/python/: bake_sbsar.py
sbsar/src/: CMakeLists.txt  api.h  generatedSchema.usda  plugInfo.json.in  plugInfo.root.json  sbsarDebug.cpp  sbsarDebug.h  sbsarfileformat.cpp  sbsarfileformat.h  schema.usda  tokens.cpp  tokens.h
sbsar/src/assetPath/: assetPathParser.cpp  assetPathParser.h
sbsar/src/assetResolver/: sbsarAsset.cpp  sbsarAsset.h  sbsarImage.cpp  sbsarImage.h  sbsarPackageResolver.cpp  sbsarPackageResolver.h  sbsarResolverCache.cpp  (+1 more)
sbsar/test/: CMakeLists.txt  sanityTests.cpp  test_sbsarConfig.cpp
serialization/: CMakeLists.txt
serialization/src/: buffer.cpp
serialization/tests/: CMakeLists.txt  testBuffer.cpp
spz/: CMakeLists.txt  README.md
spz/src/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  fileFormat.cpp  fileFormat.h  plugInfo.json.in  spzExport.cpp  spzExport.h  spzImport.cpp  spzImport.h
spz/tests/: CMakeLists.txt  SanitySplats.spz  sanityTests.cpp
stl/: CMakeLists.txt  README.md
stl/src/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  fileFormat.cpp  fileFormat.h  plugInfo.json.in  stlExport.cpp  stlExport.h  stlImport.cpp  stlImport.h  stlModel.cpp  stlModel.h
stl/tests/: CMakeLists.txt  sanityTests.cpp
utils/: CMakeLists.txt  README.md  assetresolver.cpp  assetresolver.h  common.cpp  common.h  dictencoder.cpp  dictencoder.h  geometry.cpp  geometry.h  images.cpp  images.h  layerRead.cpp  layerRead.h  layerWriteMaterial.cpp  layerWriteMaterial.h  layerWriteMaterialX.cpp  layerWriteMaterialX.h  layerWriteSdfData.cpp  layerWriteSdfData.h  layerWriteShared.cpp  layerWriteShared.h  materials.cpp  materials.h  neuralAssetsHelper.cpp  resolver.cpp  resolver.h  sdfMaterialUtils.cpp  sdfMaterialUtils.h  sdfUtils.cpp  sdfUtils.h  test.cpp  test.h  transforms.cpp  transforms.h  usdData.cpp  usdData.h
utils/src/: assetresolver.cpp  common.cpp  dictencoder.cpp  featureFlags.cpp  geometry.cpp  gsplatHelper.cpp  images.cpp  layerRead.cpp  layerReadMaterial.cpp  layerReadMaterialUtils.cpp  layerWriteMaterial.cpp  layerWriteMaterialX.cpp  layerWriteOpenPBR.cpp  layerWriteSdfData.cpp  layerWriteShared.cpp  materials.cpp  naming.cpp  neuralAssetsHelper.cpp  resolver.cpp  sdfMaterialUtils.cpp  sdfUtils.cpp  test.cpp  transforms.cpp  usdData.cpp
utils/tests/: CMakeLists.txt  tests.cpp
(+150 files in other folders)
